# packages/sdk/openapi.json
@@ -4585,6 +4585,7 @@
         "type": "object",
         "required": [
           "credential_id",
+          "prefix",
           "bucket_permissions"
         ],
         "properties": {
@@ -4640,6 +4641,9 @@
             "type": "boolean"
           },
           "can_write": {
+            "type": "boolean"
+          },
+          "is_deleting": {
             "type": "boolean"
           },
           "physical_bucket_name": {
